# campaign-platform

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
campaign_platform/: cli.py
campaign_platform/campaigns/: __init__.py  action_generator.py  campaign_builder.py  models.py
campaign_platform/dashboard/: api.py
campaign_platform/metrics/: __init__.py  impact_tracker.py  roi_calculator.py
campaign_platform/scheduler/: __init__.py  action_scheduler.py
campaign_platform/templates/email_templates/: public_comment.txt
campaign_platform/templates/review_templates/: google_review.txt
campaign_platform/templates/social_templates/: twitter_thread.txt
platform/: __init__.py  cli.py
platform/campaigns/: models.py
platform/dashboard/: api.py  frontend.html
platform/integrations/: __init__.py  violation_db.py
platform/metrics/: impact_tracker.py  roi_calculator.py
platform/scheduler/: action_scheduler.py
platform/templates/email_templates/: corporate_ceo.txt  investor_relations.txt
platform/templates/phone_scripts/: congressional_call.txt  corporate_consumer.txt
platform/templates/social_templates/: instagram_post.txt
tests/: test_campaigns.py
